--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="header">
         <div class="logo">
             <div class="navItem">
-                <img src="../E-commerce/img/logo(png).png" class="logoImg">
+                <img src="img/logo(png).png" class="logoImg">
             </div>
         </div>
         <div class="titles">
